android_library(
    name = "copperlabs-lindera",
    srcs = glob(["src/main/**/*.java"]),
    manifest = "src/main/AndroidManifest.xml",
    visibility = ["//visibility:public"],
    deps = [
        "//mediapipe/framework/formats:detection_java_proto_lite",
        "//mediapipe/framework/formats:landmark_java_proto_lite",
        "//mediapipe/java/com/google/mediapipe/framework:android_framework",
        "//mediapipe/java/com/google/mediapipe/solutioncore:camera_input",
        "//mediapipe/java/com/google/mediapipe/solutioncore:solution_base",
        "//mediapipe/java/com/google/mediapipe/solutioncore:solution_rendering",
        "//mediapipe/java/com/google/mediapipe/solutions/posetracking:copperlabs-pose-api",
        "//third_party:androidx_appcompat",
        "//third_party:autovalue",
        "@com_google_protobuf//:protobuf_javalite",
        "@maven//:androidx_annotation_annotation",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)
